css/about-style.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&family=League+Spartan:wght@100;400&family=Roboto:wght@100&display=swap');



body {
    margin: 0;
    padding: 0;
    background-color:#F2F2F2;
}

.navbar {
    border-radius: 0;
    background-color:#F2F2F2;
    z-index: 1000;
    position: fixed; 
    width: 100%; 
}


.navbar-brand {
    padding: 25px;
}

.navbar-brand img {
    height: 40px;
}

.navbar-toggle {
    margin: 25px 15px 25px 0;
}

.navbar-center {
    padding-top: 20px;
}


.navbar-center a {
    color: black !important;
    font-size: 15px;
    font-family: Karla;
}

.navbar-center a:hover {
    transition: .5s;
    color: #ff6d3c !important;
}
     
.navbar-right {
    padding: 20px;
}

.navbar-right a {
    padding: 20px;
}

.navbar-right i {
    font-size: 15px;
    color: black;
}

.navbar-right i:hover {
    transition: .5s;
    color:#ff6d3c;
}


.container-fluid {
    padding: 0;
}

.thumbnail {
    height: 100vh;
    margin: 0;
    padding: 0;
    border: 0;
}

.thumbnail img{
    height: 100%;
    width: 100%;
}

.content p {
    color: #ffffff;
    font-size: 37px;
    font-family: League Spartan;
    font-weight: bolder;
}

.content {
    max-width: 600px;
    position: absolute;
    width: 50%; 
    margin-top: 20%;
    top: 50px;
    left: 10%;
}

.second-content {
    margin: 10% 0;
    display: flex;
    justify-content: center;
}


.second-content h1 {
    margin-right: 10%;
    font-family: Karla;
    font-size: 56px;
    color: #00024B;
}

.second-content p {
    margin-top: 20px;
    font-family: League Spartan;
    font-size: 26px;
    font-weight: lighter;
    color: #000000;
}

.paragraph-container {
    max-width: 750px;
}   

.third-container ul {
    list-style: none;
}

.third-container {
    margin-bottom: 10%;
}

.third-content-container {
    max-width: 1300px;
    margin: auto;
}

.third-content {
    display: flex;
    justify-content: space-evenly;
    width: 32%;
}

.third-row {
    display: flex;
    flex-wrap: wrap;
}


.third-container h2 {
    margin-bottom: 5%;
    font-family: Karla;
    font-size: 48px;
    color: #00024b;
    display: flex;
    justify-content: center;
}

.third-content img {
    margin-bottom: 15%;
    height: 200px;
    width: 200px;
}


.third-content i {
    padding: 20px;
    color: #000000;
    font-size: 40px;
}


.third-content p, h3 {
    padding: 0 0 20px 0;
    color: #000000;
    display: flex;
    justify-content: center;
    align-items: center;
}

.third-content h3 {
    font-family: Karla;
    font-size: 24px;
}

.third-content p {
    font-family: League Spartan;
    font-size: 20px;
}


.third-content i:hover {
    transition: .5s;
    color: #ff6d3c;
}

.footer {
    background-color: #1f1f1f;
    padding: 60px 0;
    height: 540px;
    font-family: League Spartan;
}

.footer ul {
    list-style: none;
}


.footer-container {
    max-width: 1300px;
    margin: auto;
}


.footer-row {
    display: flex;
    flex-wrap: wrap;
}

.footer-content {
    width: 30%;
    padding: 0 5%;
}

.footer h4 {
    margin-bottom: 30px;
    font-size: 17px;
    font-weight: bolder;
    color: white;
}

.footer-content li {
    margin-bottom: 20px;
}

.footer-content li, a,p {
    color: white;
    font-size: 17px;
}

.footer-content i {
    padding-right: 10px;
    font-size: 20px;
}


.form-group input {
    margin-right: 25px;
    width: 236px;
    height: 38px;
    border-radius: 7px;
    background-color: #d8d8d8;
}

.form-group {
    display:inline-flex;
}

.footer-content button {
    color: black;
    font-size: 17px;
    border: none;
    border-radius: 20px;
    background-color: #ff6d3c;
    width: 98px;
    height: 38px;
}

.footer-content p {
    margin-bottom: 35px;
}

.footer-content2 {
    margin: 10% 0 0 5%;
}


.footer-content2 li {
    display: inline;
}

.footer-content2 ul {
    margin-bottom: 20px;
}


.footer-content2 li:not(:last-child) {
    padding-right: 60px;
}

.footer-content2 span {
    padding-left: 40px;
    font-weight: lighter;
    font-size: 17px;
    color: #ffffff;
}



@media(max-width: 1200px) {
    .footer-content {
        width: 50%;
    }

    .footer {
        height: auto;
    }

    .second-content {
        display: block;
        margin: 15% 15%;
    }

    .second-content h1 {
        font-size: 28px;
    }

    .second-content p {
        font-size: 20px;
    }

    .content p {
        font-size: 25px;
        margin: 30% 0;
    }

    .third-container h2 {
        font-size: 28px;
    }

    .third-content {
        width: 100%;
        margin: 5% 0;
    }

    .third-content h3 {
        font-size: 20px;
    }

    .third-content i {
        font-size: 30px;
    }

    .content {
        max-width: 400px;
        position: absolute;
        width: 50%; 
        margin-top: 0;
        top: 50px;
        left: 7%;
    }

    .content p{
        font-size: 20px;
    }

    .thumbnail{
        height: auto;
        margin: 0;
        padding: 0;
        border: 0;
    }

    .thumbnail img{
        height: auto;
        width: 100%;
    }
}

@media(max-width: 992px) {
    .footer-content {
        width: 100%;
        padding-bottom: 30px;
    }

    .form-group {
        display: block;
    }

    .form-group input {
        margin-bottom: 20px;
    }

    
    .footer-content2 li {
        display: block;
    }

    .footer-content2 li:not(:last-child) {
        padding-bottom: 20px;
    }

    .thumbnail{
        margin-top: 100px;
    }

    .content {
        max-width: 600px;
        position: absolute;
        width: 50%; 
        margin-top: 0;
        top: 2%;
        left: 5%;
    }
}



@media(max-width: 760px) {

    .content {
        max-width: 400px;
        position: absolute;
        width: 50%; 
        margin-top: 10px;
        top: 2%;
        left: 5%;
    }
    .content p{
        font-size: 18px;
    }

}

@media(max-width: 560px) {
    .content {
        top: 5%;
    }
    .content p{
        font-size: 14px;
    }

}

@media(max-width: 430px) {

    .content {
        top: 6%;
    }
    .content p{
        font-size: 9px;
    }
}

@media(max-width: 360px) {

    .content {
        top: 7%;
    }
    .content p{
        font-size: 9px;
    }
}






.footer-content a:hover {
    color: #ffffff;
}

.form-group button:hover {
    background-color: #ff7e53;
}

.footer-content2 a:hover {
    color: #ffffff;
}

